--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Juego de Aventuras</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <title>Calavera Arena</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background-color: #000;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
     <script type="importmap">
         {
             "imports": {
@@ -14,6 +21,14 @@
             }
         }
     </script>
-    <script type="module" src="./src/game.js"></script>
+</head>
+<body>
+    <script type="module">
+        import { Game } from './src/game.js';
+        
+        // Crear y iniciar el juego
+        const game = new Game();
+        game.start();
+    </script>
 </body>
 </html> 
