Allowing camera Y angle to change a bit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "https://unpkg.com/three@0.162.0/build/three.module.js"
+                "three": "https://unpkg.com/three@0.162.0/build/three.module.js?v=234234"
             }
         }
     </script>
