--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,8 @@
             background-color: #000;
         }
         canvas {
+            width: 100%;
+            height: 100%;
             display: block;
         }
     </style>
@@ -27,9 +29,16 @@
     <script type="module">
         import { Game } from './src/game.js';
         
-        // Crear y iniciar el juego
+        // Crear instancia del juego
         const game = new Game();
-        game.start();
+        
+        // Inicializar el juego de forma asíncrona
+        try {
+            await game.start();
+        } catch (error) {
+            console.error('Error al inicializar el juego:', error);
+            // Aquí podrías mostrar un mensaje de error al usuario
+        }
     </script>
 </body>
 </html> 
