hide M key shortcut

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="shortcut"><span class="key">W</span> <span class="key">A</span> <span class="key">S</span> <span class="key">D</span> Move ship</div>
                 <div class="shortcut"><span class="key">SHIFT</span> Show scoreboard</div>
                 <div class="shortcut"><span class="key">CLICK</span> Fire cannon</div>
-                <div class="shortcut"><span class="key">M</span> Toggle music</div>
+                <!-- <div class="shortcut"><span class="key">M</span> Toggle music</div> -->
             </div>
             
             <form id="player-form" class="player-form">
