Rename to calavera mode

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- UI de Modo Calavera -->
     <div id="skull-mode-container" class="ui-container skull-mode-container">
-        <div id="skull-timer">Next skull mode: 0:00</div>
+        <div id="skull-timer">Next Calavera mode: 0:00</div>
     </div>
 
     <!-- UI de Mensajes -->
