--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <input type="text" id="player-name" placeholder="Username" required>
                 <button type="submit">Join</button>
             </form>
+
+            <p style="margin-top: 20px;font-size:.8em">Follow updates on <a href="https://x.com/williampreneur" style="color: #fff;" target="_blank">Twitter</a></p>
         </div>
     </div>
 
