--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </div>
 
     <a target="_blank" href="https://jam.pieter.com" class="jam-link">🕹️ Vibe Jam 2025</a>
+    <a target="_blank" href="https://x.com/williampreneur" class="twitter-link">👾 @williampreneur</a>
     
     <script type="module">
         import { Game } from './src/game.js';
